# Fertility_Spring26

./: .gitignore  AGENTS.md  CALIBRATION_STATUS.md  CLAUDE.md  README.md  SESSION_DIARY.md  fertility_dt_latex.code-workspace
code/model/: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml  run_intergen_model.py
code/model/benchmarks/: README.md  accounting_scale_fast_iter1_2026_05_05.json  accounting_scale_fast_live_stop_2026_05_05.json  accounting_scale_fast_live_stop_fixed_vo_2026_05_05.json  accounting_scale_psi_sensitivity_iter1_2026_05_05.json  fast_ge_iter1.json  fast_ge_iter1_2026_05_05_final_default.json  fast_ge_iter1_2026_05_05_post_scaled_patch_default.json  fast_ge_iter1_2026_05_05_postclosure_default.json  fast_ge_iter1_2026_05_05_postclosure_default_logupdate.json  fast_ge_iter1_2026_05_05_postclosure_default_rerun.json  fast_ge_iter1_2026_05_05_preclosure.json  fast_ge_iter1_compiled_forward.json  fast_ge_iter1_compiled_forward_warm.json  fast_ge_iter1_final_distribution.json  fast_ge_iter1_no_mass_rescale_2026_05_05.json  fast_ge_iter1_tenure_preidx.json  grad_descent_bench.json  howard_baseline_eval6.json  howard_baseline_iter1.json  howard_kernel_eval6.json  howard_kernel_eval6_full_kernel.json  howard_kernel_eval6_lockernel.json  howard_kernel_eval6_parallel.json  howard_kernel_eval6_tcjkernel.json  howard_kernel_eval6_warm.json  matlab_fast_ge_converged.json  matlab_fast_ge_iter1.json  matlab_solve_theta_x0_benchmark.json  matlab_solve_theta_x0_fast.json  mini_parameter_solve_10_fast_2026_05_05.json  outside_closure_fast_iter8_2026_05_05.json  (+25 more)
(+1049 files in other folders)
